# mutagenesis_visualization

./: .gitignore  .pylintrc  .readthedocs.yml  .style.yapf  .travis.yml  CITATION.cff  MANIFEST.in  README.md  codecov.yml  compile.sh  git_push.py  main.py  mutagenesis_visualization.py  mypy.ini  pyproject.toml  requirements.txt  run_tests.ipynb  run_tests.sh  setup.py  to_do.txt
docs/: .readthedocs.yml  Makefile  aboutme.rst  api.rst  api.txt  api_new.txt  conf.py  doc0_intro.rst  doc1_libraries.rst  doc2_processing.rst  doc3_normalizing.rst  doc4_plotting.rst  doc4a_plotting_heatmaps.rst  doc4b_plotting_stats.rst  doc5_plotly.rst  doc6_other_datasets.rst  doc_libraries.rst  doc_normalizing.rst  doc_other_datasets.rst  doc_plotly.rst  doc_plotting.rst  doc_processing.rst  doc_testing.rst  implementation.rst  index.rst  install.rst  make.bat  mut_moreexamples.rst  mut_normalizing.rst  mut_plotting.rst  mut_processing.rst  mut_testing.rst  overview.rst  readthedocs_requirements.txt  statistics_data_normalization.docx  workflow.ai  ~$boutme.rst
docs/_static/: tablerank.rst  workflow.ai  workflow_v2.ai  workflow_v3.ai
docs/html/: aph_3d_pdbprop.html  aph_3dscatter.html  bla_3d_pdbprop.html  bla_3dscatter.html  hras_3d_pdbprop.html  hras_3daspsubstitution.html  hras_3ddistcenter.html  hras_3dscatter.html  hras_3dvalsubstitution.html  hras_heatmap.html  hras_histogram.html  hras_mean.html  hras_mean_A.html  hras_rankposition.html  (+3 more)
example/: HRas166_GAPGEF.csv  HRas166_RBD.csv  Ras_family_trimmed.fasta
mutagenesis_visualization/: __init__.py  conftest.py  experiment.ipynb  experiment.py  experiment2.py  mut_normalizing.ipynb  mut_plotting.ipynb  mut_plotting.py  mut_processing.ipynb  mut_processing.py  mutagenesis_visualization.ipynb  mutagenesis_visualization.py  oldinit.py
(+377 files in other folders)
